// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-email/mailchimp SendEmail when all inputs are correct sends email with attachments 1`] = `
Ok {
  "value": Object {
    "messageId": "531f336602e04044bceba9d169b2046c",
  },
}
`;

exports[`communication/send-email/mailchimp SendEmail when all inputs are correct should return messageId as result 1`] = `
Ok {
  "value": Object {
    "messageId": "d16ae96d3dd64d10bbd800c55a12c3ac",
  },
}
`;

exports[`communication/send-email/mailchimp when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Invalid inputs\\",
  \\"detail\\": \\"Validation error: {\\\\\\"message\\\\\\":{\\\\\\"from_email\\\\\\":\\\\\\"An email address must contain a single @\\\\\\"}}\\"
}
AST Path: definitions[0].statements[4].responseHandlers[1].statements[1]
Original Map Location: Line 69, column 7",
}
`;
